--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Hello, World!
-  <div class="material-icons">search</div>
+
+  <!-- Header Section -->
+  <header>
+    <div class="inner">
+
+      <a href="/" class="logo">
+        <img src="./images/starbucks_logo.png" alt="STARBUCKS"/>
+      </a> 
+
+    </div>
+  </header>
+
+
 </body>
 </html>
