--- a/index.html
+++ b/index.html
@@ -487,7 +487,19 @@
       <div class="swiper-next">
         <div class="material-icons">arrow_forward</div>
       </div>
-    
+    </div>
+
+  </section>
+
+  <section class="rewards">
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
+    <div class="inner">
+      <div class="btn-group">
+        <div class="btn btn--reverse sign-up">회원가입</div>
+        <div class="btn sign-in">로그인</div>
+        <div class="btn gift">e-Gift 선물하기</div>
+      </div>
     </div>
   </section>
 </body>
