--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
     </div>
   </section>
 
-  <section class="season-product">
+  <!-- SEASON PRODUCT -->
+  <section class="season-product scroll-spy">
     <div class="inner">
 
       <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
@@ -526,8 +527,7 @@
 
       <div class="text-group">
         <img src="./images/season_product_text1.png" alt="상쾌하게 여름을 반겨줄 시즌 원두 아이스 커피 블렌드" class="title back-to-position to-left delay-1" />
-        <img src="./images/season_product_text2.png" alt="아프리카와 라틴 아메리카 커피의 브렌드로 시트러스함과 은은한 캐러멜 향을 동시에 느낄 수 있으며, 차갑게 즐길 때 풍미가 더욱 깊어지는 원두입니다." class="description back-to-position to-left delay-2" />
-        
+        <img src="./images/season_product_text2.png" alt="아프리카와 라틴 아메리카 커피의 브렌드로 시트러스함과 은은한 캐러멜 향을 동시에 느낄 수 있으며, 차갑게 즐길 때 풍미가 더욱 깊어지는 원두입니다." class="description back-to-position to-left delay-2" />       
         <div class="more back-to-position to-left delay-3">
           <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
@@ -588,18 +588,18 @@
   </section>
 
   <!-- FIND THE STORE -->
-   <section class="find-store">
+   <section class="find-store scroll-spy">
     <div class="inner">
 
       <img src="./images/find_store_texture1.png" alt="" class="texture1">
       <img src="./images/find_store_texture2.png" alt="" class="texture2">
-      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1">
-      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2">
+      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1 back-to-position to-right delay-0">
+      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2 back-to-position to-right delay-1">
       
       <div class="text-group">
-        <img src="./images/find_store_text1.png" alt="스타벅스를 가까이에서 경험해보세요." class="title" />
-        <img src="./images/find_store_text2.png" alt="고객님과 가장 가까이 있는 매장을 찾아보세요!" class="description" />
-        <div class="more">
+        <img src="./images/find_store_text1.png" alt="스타벅스를 가까이에서 경험해보세요." class="title back-to-position to-left delay-0" />
+        <img src="./images/find_store_text2.png" alt="고객님과 가장 가까이 있는 매장을 찾아보세요!" class="description back-to-position to-left delay-1" />
+        <div class="more back-to-position to-left delay-2">
           <a href="javascript:void(0)" class="btn">매장찾기</a>
         </div>    
       </div>
