--- a/index.html
+++ b/index.html
@@ -691,5 +691,10 @@
       </div>
      </footer>
 
+
+     <div id="to-top">
+      <div class="material-icons">arrow_upward</div>
+     </div>
+
 </body>
 </html>
